welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:5: error: ';' expected but 'false' found.
    retun false
          ^