welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if ((hour<7 && taling==true) || (hour>20 && talking ==true)){
    return true
  }else{
    retun false
  }
}